# corefincpp

./: CMakeLists.txt  README.md  ketentuan.txt
include/headers/: auth.h  clearScreen.h  fileio.h  finance.h  user.h
src/: main.cpp
src/extlib/: color.cpp
src/modules/: auth.cpp  clearScreen.cpp  fileio.cpp  financeCRUD.cpp
